--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,5 +12,14 @@
     <string name="hello_second_fragment">Привет второй фрагмент. Аргумент:% 1 $ s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Привет пустой фрагмент</string>
+    <string name="start">Начало</string>
+    <string name="stop">останавливаться</string>
+    <!--navbar-->
+    <string name="home">дом</string>
+    <string name="timer">таймер</string>
+    <string name="list">список</string>
     <string name="settings">Настройки</string>
+    <string name="lang_selection">выберите язык</string>
+    <string name="time">00:00:00</string>
+
 </resources>
