--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,12 @@
     <string name="settings">Settings</string>
     <string name="lang_selection">Language</string>
     <string name="time">00:00:00</string>
+
+    <string-array name="Languages">
+        <item>Work</item>
+        <item>Meeting</item>
+        <item>Break</item>
+        <item>Sport</item>
+        <item>Party</item>
+    </string-array>
 </resources>
