--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -21,5 +21,5 @@
     <string name="settings">Einstellungen</string>
     <string name="lang_selection">Sprache</string>
     <string name="time">00:00:00</string>
-
+    <string name="export">Exportieren</string>
 </resources>
