--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,5 +21,5 @@
     <string name="settings">Настройки</string>
     <string name="lang_selection">выберите язык</string>
     <string name="time">00:00:00</string>
-
+    <string name="export">экспорт</string>
 </resources>
