--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="settings">Settings</string>
     <string name="lang_selection">Language</string>
     <string name="time">00:00:00</string>
+    <string name="export">Export</string>
 </resources>
