--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="list">List</string>
     <string name="settings">Settings</string>
     <string name="lang_selection">Language</string>
-    <string name="time">00:00:00</string>
+    <string name="time">-- : -- : --</string>
 
     <string name="Title">Title</string>
     <string name="EnterText">Enter Text</string>
