--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,16 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="resetConfirmation">Are you sure you want to delete all your data?</string>
 
     <string name="start">Start</string>
     <string name="stop">Stop</string>
@@ -22,6 +27,7 @@
     <string name="lang_selection">Language</string>
     <string name="time">-- : -- : --</string>
     <string name="export">Export</string>
+    <string name="reset">Reset</string>
 
     <string name="Title">Title</string>
     <string name="EnterText">Enter Text</string>
