--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,11 +7,17 @@
     <string name="second_fragment_label">Второй фрагмент</string>
     <string name="next">Следующий</string>
     <string name="previous">Предыдущий</string>
+    <string name="yes">да</string>
+    <string name="no">Нет</string>
 
     <string name="hello_first_fragment">Привет первый фрагмент</string>
     <string name="hello_second_fragment">Привет второй фрагмент. Аргумент:% 1 $ s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Привет пустой фрагмент</string>
+
+
+    <string name="resetConfirmation">Вы уверены, что хотите удалить все свои данные?</string>
+
     <string name="start">Начало</string>
     <string name="stop">останавливаться</string>
     <!--navbar-->
@@ -22,6 +28,7 @@
     <string name="lang_selection">выберите язык</string>
     <string name="time">-- : -- : --</string>
     <string name="export">экспорт</string>
+    <string name="reset">Сброс настроек</string>
 
     <string name="Title">Заголовок</string>
     <string name="EnterText">Введите текст</string>
