ST_016 added Text input for custom Tasks [AK, KT]

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -34,12 +34,14 @@
     <string name="EnterText">Text eingeben</string>
     <string name="OK">OK</string>
     <string name="Cancel">Abbrechen</string>
+    <string name="customTask">Your Taskname</string>
 
-    <string-array name="Languages">
+    <string-array name="TaskTypes">
         <item>Arbeit</item>
         <item>Konferenz</item>
         <item>Pause</item>
         <item>Sport</item>
         <item>Feiern</item>
+        <item>anderes..</item>
     </string-array>
 </resources>
