--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -34,12 +34,14 @@
     <string name="EnterText">Введите текст</string>
     <string name="OK">OK</string>
     <string name="Cancel">Отмена</string>
+    <string name="customTask">Your Taskname</string>
 
-    <string-array name="Languages">
+    <string-array name="TaskTypes">
         <item>Работа</item>
         <item>Встреча</item>
         <item>Перерыв</item>
         <item>Спорт</item>
         <item>Вечеринка</item>
+        <item>xxx</item>
     </string-array>
 </resources>
