ST-020 implemented pause function but testing does not work on my device :( [AK, CK, SC]

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,6 +35,8 @@
     <string name="OK">OK</string>
     <string name="Cancel">Отмена</string>
     <string name="customTask">Your Taskname</string>
+    <string name="pause">Pause</string>
+    <string name="Continue">Continue</string>
 
     <string-array name="TaskTypes">
         <item>Работа</item>
