ST-019 Added popups to change Task and pause names in detail popup [KT, SP]

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -30,7 +30,7 @@
     <string name="export">Exportieren</string>
     <string name="reset">Reset</string>
 
-    <string name="Title">Titel</string>
+    <string name="Title">Bearbeiten</string>
     <string name="EnterText">Text eingeben</string>
     <string name="OK">OK</string>
     <string name="Cancel">Abbrechen</string>
