--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="export">Export</string>
     <string name="reset">Reset</string>
 
-    <string name="Title">Title</string>
+    <string name="Title">Edit</string>
     <string name="EnterText">Enter Text</string>
     <string name="OK">OK</string>
     <string name="Cancel">Cancel</string>
