ST-019 added icon [SP,KT]

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,6 +40,8 @@
     <string name="Continue">Weiter</string>
     <string name="Delete">Löschen</string>
     <string name="Close">Schließen</string>
+    <string name="SelectLanguage">Sprache auswählen: </string>
+
 
     <string-array name="TaskTypes">
         <item>Arbeit</item>
