--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -40,6 +40,7 @@
     <string name="Continue">Продолжать</string>
     <string name="Delete">Удалить</string>
     <string name="Close">Закрыть</string>
+    <string name="SelectLanguage">выберите язык: </string>
 
     <string-array name="TaskTypes">
         <item>Работа</item>
